Update Dockerfile to correctly build project
 -- Also updated pom to generate full jar without version for easy docker build